--- a/dummy_coding.html
+++ b/dummy_coding.html
@@ -202,6 +202,8 @@ head(turk)
 <pre><code class="r">attach(turk)
 </code></pre>
 
+<p><em>read.csv(file.choose(),header=T)</em> can be used to select the file manually.</p>
+
 <ul>
 <li>There are <strong>3</strong> levels within Origin,<br/>
 therefore we must set <strong>1</strong> as a reference and the other <strong>2</strong> as dummy coded variables.<br/></li>
